tests/should_fail/fn_return_wrong_type_int_str.nv
module fn_return_wrong_type_int_str
// Should fail: returning Int from function declared to return String
fn foo(x: Int) -> String { return x }
